Version 0.1.5
Posted By: Dalton Carter

-Officially added Che Carter as Collaborator, revised Changelog to include who Posted the changes.
-Added Mod Tags class.
-Set up file for existing tags to be transferred when all other blocks have been transferred.
-Began Implementing Data Gen, this will be an ongoing process in order to catch up with what has already been
made and transferred. At this time only some data has been filled in, others are present as placeholders.


4/5/2024
version 0.1.5
Posted by: Dalton Carter

-Updated textures for all ores.
-Changed texture for raw Qualrite and Qualrim Compound to match ore color
-Made textures for Deep Slate, Nether, and End Ore variants
-Made Raw Gundanium and Raw Alythum item textures


======================================================
LEGACY 1.16.5 Changelog
0.5.2
======================================================
 (0.1 - 0.5): 10/08/2023 - 3/20/2024
 Changelog initiated:
 - Separated Crystal Tech mod from, Tutorial mod and Glowing Tree 16.5 mod.
 - Blossom Trees, Spread Logic, Tiberium Crops, Flower of Life, Deco Blocks, basic items,
 fluids, Ores, plagued weapons, Gundanium Armor, horse armor, Tags, Ore Gen, Tree gen, structure gen, and all associated
 textures, loot tables, and recipes added/created.
 -Added License and ReadMe

 (0.5.2): 3/22/2024
 - Explosion effect added when mining Blue, Red, and Purple Tiberium without a silk touch pickaxe.
 - Tiberium crop texture changed to Cross render type.
 - Fixed Tiberium and Ichor soil Sustain Plant Logic. Blocks now only accept specific plants/ certain types of Tiberium.
 - Began adding Tiberium Infection logic to Tiberium/Ichor soil, created necessary Mod Tags for infection logic,
 which will include Plagued Logs infecting other logs and leaves, and Plagued Leaves infecting other leaves.
 - Added explosion resistance to appropriate blocks. I.E Mod Metal blocks, Tiberium/Ichor Soil, and Blossom Trees.
 - Updated License and Readme.
 - Credits File Added.